finalizado o carrinho de compra com valores, compra, limpando

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <section class="carrinho__produtos" id="lista-produtos">
         <section class="carrinho__produtos__produto">
-          <span id="texto-valor-quantidade" class="texto-azul">1x</span> Celular <span class="texto-azul">R$1400</span>
+          <span id="texto-valor-quantidade" class="texto-azul"  >1x</span> <span id="text-nome-produto-carrinho">Celular</span> <span id="text-valor-produto-carrinho" class="texto-azul">R$1400</span>
         </section>
       </section>
 
